<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">dlauncher</string>
    <string name="settings_name">Launcher Settings</string>
    
    <string name="nb">Normal Background Color</string>
    <string name="nf">Normal Foreground Color"</string>
    <string name="sb">Selected Background Color</string>
    <string name="sf">Selected Foreground Color</string>
    
    <string name="gravity">Panel position</string>
    <string name="size">Text size</string>
    <string name="search">Enable Google search</string>
    <string name="opacity">Background opacity</string>
    
    <string-array name="gravity">
        <item>Top</item>
        <item>Bottom</item>
	</string-array>
    
    <string name="colors">Colors</string>
    <string name="layout">Layout</string>
    <string name="other">Other</string>
    
    <string name="search_item">Google search</string>
    <string name="selpos">Select position</string>
</resources>
